fixed broken css/changed font color

--- a/app.css
+++ b/app.css
@@ -1,4 +1,4 @@
 body {
-    background-color:#f7020
-    color:#fff
+    background-color:#f70201;
+    color: #ffffff;
 }
